syntax = "proto3";
package dyson;


option go_package = "github.com/org/dyson/x/dyson/types";

// MsgRun runs a script at a specific address
message MsgRun {
    // The account sending the transaction
    string creator = 1;
    // dys address of the scrit to call
    string address = 2;
    // optional extra source code to append to the end of the script before running
    string extra_lines = 3; 
    // optional function to call
    string function_name = 4;
    // optional args to call the function with 
    string args = 5;
    // optional kwargs to run 
    string kwargs = 6;
    // optional comma seperated list of coins to send the script (for example "123dys,456token")
    string coins = 7;
}

message MsgRunResponse {
    string response = 1;
}
